<resources>
    <string name="app_name">Pacman</string>
    <string name="points">Points:</string>
    <string name="levels">Level:</string>
    <string name="move_right">Move right</string>
    <string name="move_left">Move left</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="counter">Counter</string>
</resources>
